# ai-family-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
familycli/: __init__.py  main.py
familycli/auth/: __init__.py  encryption.py  user_manager.py
familycli/chat/: __init__.py  chat_engine.py  llm_conversation_director.py  response_generator.py  session_manager.py  streaming_handler.py
familycli/config/: config_manager.py  db_manager.json  user_config_manager.py
familycli/database/: backup_utils.py  db_manager.py  migration_v1_1.py  models.py
familycli/llm/: model_validator.py  universal_llm_manager.py
familycli/personas/: family_tree_manager.py  feedback_manager.py  learning_engine.py  memory_manager.py  persona_manager.py  persona_pack_manager.py  relationship_manager.py  scene_manager.py
familycli/ui/: cli_interface.py  markdown_renderer.py  streaming_ui.py
src/: __init__.py  main.py
src/auth/: encryption.py  user_manager.py
src/chat/: chat_engine.py  llm_conversation_director.py  response_generator.py  session_manager.py  streaming_handler.py
src/config/: __init__.py  config_manager.py  default_personas.json  llm_providers.json  user_config_manager.py
src/database/: __init__.py  backup_utils.py  db_manager.py  models.py
src/llm/: __init__.py  api_handler.py  model_validator.py  streaming_client.py  universal_llm_manager.py
src/personas/: __init__.py  learning_engine.py  persona_manager.py  relationship_manager.py
src/ui/: cli_interface.py  (+1 more)
(+12 files in other folders)
